@@ -63,6 +63,8 @@ module ActionView
       def end_form_tag
         "</form>"
       end
+      
+      deprecate :end_form_tag, :start_form_tag
 
       # Creates a dropdown selection box, or if the <tt>:multiple</tt> option is set to true, a multiple
       # choice selection box.
