@@ -1,5 +1,7 @@
 *SVN*
 
+* Deprecate start_form_tag and end_form_tag.  Use form_tag / '</form>' from now on.  [Rick]
+
 * Added block-usage to PrototypeHelper#form_remote_tag, document block-usage of FormTagHelper#form_tag [Rick]
 
 * Add a 0 margin/padding div around the hidden _method input tag that form_tag outputs.  [Rick]
